added postgress db and rest controller setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Job-Tracker
+# initialize database table in commandline runner and remove below
+spring.sql.init.mode=always
