working on spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Job-Tracker
-# initialize database table in commandline runner and remove below
+server.servlet.context-path=/api
+# below make schema run for postgresql instead of just for in memory databases
 spring.sql.init.mode=always
