--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
     	<artifactId>jjwt-impl</artifactId>
     	<version>0.12.6</version>
 		</dependency>
+		<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    	<artifactId>jjwt-jackson</artifactId>
+    	<version>0.12.6</version>
+		</dependency>
 
 		<dependency>
       <groupId>org.springframework.boot</groupId>
@@ -74,6 +79,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 	</dependencies>
 
 	<build>
