added key pair usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Job-Tracker
 server.servlet.context-path=/api
 # below make schema run for postgresql instead of just for in memory databases
 spring.sql.init.mode=always
+spring.profiles.default=dev
