--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,13 +13,14 @@
     "@tailwindcss/vite": "^4.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "daisyui": "^5.0.0-beta.7",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
