--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,12 @@
 services:
   postgres:
     container_name: postgres-db
-    image: 'postgres:latest'
+    image: "postgres:latest"
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - "POSTGRES_DB=mydatabase"
+      - "POSTGRES_PASSWORD=secret"
+      - "POSTGRES_USER=myuser"
     ports:
-      - '5432:5432'
-  
+      - "5432:5432"
+
   # Add nginx service container
