--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,9 @@
-{"properties": [{
-  "name": "key.file.path",
-  "type": "java.lang.String",
-  "description": "This is the folder path to the public and private keys 'key.file.path'"
-}]}
+{
+  "properties": [
+    {
+      "name": "key.file.path",
+      "type": "java.lang.String",
+      "description": "This is the folder path to the public and private keys 'key.file.path'"
+    }
+  ]
+}
