added actuator endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.servlet.context-path=/api
 # below make schema run for postgresql instead of just for in memory databases
 spring.sql.init.mode=always
 spring.profiles.default=dev
+
+# Actuator health check config
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
