--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
   </dependencies>
 
   <build>
+    <finalName>JobTracker</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
