--- a/integration/compose.yaml
+++ b/integration/compose.yaml
@@ -1,5 +1,34 @@
 name: job-tracker-intagration-test
 services:
+  selenium-hub:
+    image: selenium/hub:latest
+    container_name: selenium-hub
+    ports:
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
+    environment:
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+      - SE_NODE_MAX_SESSIONS=4
+    networks:
+      - job-tracker-network
+
+  chrome:
+    image: selenium/node-chrome:latest
+    container_name: selenium-chrome-node
+    shm_size: 2gb
+    depends_on:
+      - selenium-hub
+    environment:
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_HOST_PORT=4442
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+      - SE_NODE_MAX_SESSIONS=4
+    networks:
+      - job-tracker-network
+
   postgres:
     container_name: postgres-db-test-90134
     image: "postgres:latest"
